@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/testscenarios/testscenarios-0.4-r4.ebuild,v 1.4 2014/04/01 14:33:06 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/testscenarios/testscenarios-0.4-r4.ebuild,v 1.5 2014/04/02 12:52:41 jer Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_2,3_3} pypy2_0 pypy )
@@ -13,7 +13,7 @@ SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~amd64 ~hppa ~x86 ~amd64-linux ~x86-linux"
 
 RDEPEND="dev-python/testtools[${PYTHON_USEDEP}]"
 DEPEND="${RDEPEND}
