@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst prepare setup
-DEPEND=!apache2? ( virtual/httpd-cgi ) >=dev-lang/perl-5.8.8-r8 >=dev-perl/SNMP_Session-1.13 >=net-analyzer/fping-2.4_beta2-r2 >=net-analyzer/rrdtool-1.2[perl] apache2? ( >=www-apache/mod_perl-2.0.1 www-apache/mod_fcgid ) curl? ( >=net-misc/curl-7.21.4 ) dev-perl/CGI-Session dev-perl/Config-Grammar dev-perl/Digest-HMAC dev-perl/FCGI dev-perl/IO-Socket-SSL dev-perl/Net-DNS dev-perl/libwww-perl dig? ( net-dns/bind-tools ) echoping? ( >=net-analyzer/echoping-6.0.2 ) ipv6? ( >=dev-perl/Socket6-0.20 ) ldap? ( dev-perl/perl-ldap ) radius? ( dev-perl/RadiusPerl ) ssh? ( dev-perl/Net-OpenSSH ) telnet? ( dev-perl/Net-Telnet ) virtual/perl-libnet virtual/pkgconfig
+DEPEND=!apache2? ( virtual/httpd-cgi ) apache2? ( >=www-apache/mod_perl-2.0.1 www-apache/mod_fcgid ) curl? ( >=net-misc/curl-7.21.4 ) dig? ( net-dns/bind-tools ) echoping? ( >=net-analyzer/echoping-6.0.2 ) ipv6? ( >=dev-perl/Socket6-0.20 ) ldap? ( dev-perl/perl-ldap ) radius? ( dev-perl/RadiusPerl ) ssh? ( dev-perl/Net-OpenSSH ) telnet? ( dev-perl/Net-Telnet ) >=dev-lang/perl-5.8.8-r8 >=dev-perl/SNMP_Session-1.13 >=net-analyzer/fping-2.4_beta2-r2 >=net-analyzer/rrdtool-1.2[perl] dev-perl/CGI-Session dev-perl/Config-Grammar dev-perl/Digest-HMAC dev-perl/FCGI dev-perl/IO-Socket-SSL dev-perl/Net-DNS dev-perl/libwww-perl virtual/perl-libnet virtual/pkgconfig
 DESCRIPTION=A powerful latency measurement tool.
 EAPI=5
 HOMEPAGE=http://oss.oetiker.ch/smokeping/
 IUSE=apache2 curl dig echoping ipv6 ldap radius ssh telnet
 KEYWORDS=amd64 ~hppa x86
 LICENSE=GPL-2
-RDEPEND=!apache2? ( virtual/httpd-cgi ) >=dev-lang/perl-5.8.8-r8 >=dev-perl/SNMP_Session-1.13 >=net-analyzer/fping-2.4_beta2-r2 >=net-analyzer/rrdtool-1.2[perl] apache2? ( >=www-apache/mod_perl-2.0.1 www-apache/mod_fcgid ) curl? ( >=net-misc/curl-7.21.4 ) dev-perl/CGI-Session dev-perl/Config-Grammar dev-perl/Digest-HMAC dev-perl/FCGI dev-perl/IO-Socket-SSL dev-perl/Net-DNS dev-perl/libwww-perl dig? ( net-dns/bind-tools ) echoping? ( >=net-analyzer/echoping-6.0.2 ) ipv6? ( >=dev-perl/Socket6-0.20 ) ldap? ( dev-perl/perl-ldap ) radius? ( dev-perl/RadiusPerl ) ssh? ( dev-perl/Net-OpenSSH ) telnet? ( dev-perl/Net-Telnet ) virtual/perl-libnet
+RDEPEND=!apache2? ( virtual/httpd-cgi ) apache2? ( >=www-apache/mod_perl-2.0.1 www-apache/mod_fcgid ) curl? ( >=net-misc/curl-7.21.4 ) dig? ( net-dns/bind-tools ) echoping? ( >=net-analyzer/echoping-6.0.2 ) ipv6? ( >=dev-perl/Socket6-0.20 ) ldap? ( dev-perl/perl-ldap ) radius? ( dev-perl/RadiusPerl ) ssh? ( dev-perl/Net-OpenSSH ) telnet? ( dev-perl/Net-Telnet ) >=dev-lang/perl-5.8.8-r8 >=dev-perl/SNMP_Session-1.13 >=net-analyzer/fping-2.4_beta2-r2 >=net-analyzer/rrdtool-1.2[perl] dev-perl/CGI-Session dev-perl/Config-Grammar dev-perl/Digest-HMAC dev-perl/FCGI dev-perl/IO-Socket-SSL dev-perl/Net-DNS dev-perl/libwww-perl virtual/perl-libnet
 SLOT=0
 SRC_URI=http://oss.oetiker.ch/smokeping/pub/smokeping-2.6.9.tar.gz
 _eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	multilib	fac675dcccf94392371a6abee62d909f	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=8eebfd5714c68a338b3320b9336ce22e
+_md5_=2ece2cafa355efd4a21bc775e3b8dcef
