@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/smokeping
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.54 2014/04/02 00:37:56 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/smokeping/ChangeLog,v 1.55 2014/04/02 12:59:38 jer Exp $
+
+  02 Apr 2014; Jeroen Roovers <jer@gentoo.org> smokeping-2.6.9.ebuild:
+  Whitespace.
 
   02 Apr 2014; Jeroen Roovers <jer@gentoo.org> smokeping-2.6.9.ebuild,
   +files/smokeping-2.6.9-pod.patch:
